--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: docker/latest/Dockerfile
-          target: server
+          target: launcher
           platforms: linux/amd64,linux/arm64
           tags: dnys1/unpub-launcher:latest
           push: true
