--- a/docker/latest/docker-compose.yml
+++ b/docker/latest/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         image: mongo
         container_name: mongodb_unpub
         volumes:
-            - ~/mongodb/unpub:/data/db
+            - ~/unpub:/data/db
         ports:
             - 27017:27017
         restart: unless-stopped
