--- a/test/pkg_a/pubspec.yaml
+++ b/test/pkg_a/pubspec.yaml
@@ -1,4 +1,4 @@
-name: test_pkg
+name: pkg_a
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 homepage: https://github.com/dnys1/unpub
