--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,10 +3,7 @@ name: Docker
 on:
   push:
     branches:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+      - 'main'
 
 jobs:
   docker-server:
