--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
       - name: Run Tests
         run: |
           go test -v ./
@@ -26,7 +30,6 @@ jobs:
     name: Docker (Server)
     strategy:
       matrix:
-        go-version: [1.17]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -63,7 +66,6 @@ jobs:
     name: Docker (Launcher)
     strategy:
       matrix:
-        go-version: [1.17]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
