--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.16, 1.17]
-        dart-version: [2.14]
+        dart-version: [stable]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
