--- a/test/pkg_a/pubspec.yaml
+++ b/test/pkg_a/pubspec.yaml
@@ -2,10 +2,11 @@ name: pkg_a
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 homepage: https://github.com/dnys1/unpub
+publish_to: http://localhost:5000
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
-dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.16.0
+# dev_dependencies:
+#   lints: ^2.0.0
+#   test: ^1.16.0
