--- a/web/pubspec.yaml
+++ b/web/pubspec.yaml
@@ -2,16 +2,19 @@ name: unpub_web
 description: Frontend for Unpub server
 version: 2.0.0-pre
 publish_to: none
+
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
+
 dependencies:
-  angular: ^7.0.0
-  angular_forms: ^4.0.0
-  angular_router: ^3.0.0
+  ngdart: ^8.0.0-0
+  ngforms: ^5.0.0-0
+  ngrouter: ^4.0.0-0
   http: ^0.13.3
-  json_annotation: ^4.0.0
-  markdown: ^4.0.0
+  json_annotation: ^4.8.0
+  markdown: ^7.0.2
+
 dev_dependencies:
   build_runner: ^2.0.0
   build_web_compilers: ^3.2.1
-  json_serializable: ^5.0.0
+  json_serializable: ^6.6.1
