--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,8 @@ jobs:
     name: Test
     strategy:
       matrix:
-        go-version: [1.16, 1.17]
-        dart-version: [dev]
+        go-version: [1.20]
+        dart-version: [stable]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -35,6 +35,7 @@ jobs:
         timeout-minutes: 1
   docker-server:
     name: Docker (Server)
+    needs: test
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -71,6 +72,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
   docker-launcher:
     name: Docker (Launcher)
+    needs: test
     strategy:
       matrix:
         os: [ubuntu-latest]
