--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: ['1.20']
         dart-version: [stable]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
